--- a/codigo/src/main/java/PaginaAtletas.form
+++ b/codigo/src/main/java/PaginaAtletas.form
@@ -1,187 +1,200 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="PaginaAtletas">
-  <grid id="27dc6" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="painelPrincipal" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="804" height="604"/>
+      <xy x="20" y="20" width="800" height="600"/>
     </constraints>
-    <properties/>
+    <properties>
+      <minimumSize width="800" height="600"/>
+      <toolTipText value=""/>
+    </properties>
     <border type="none"/>
     <children>
-      <grid id="7228b" binding="painelPrincipal" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="4687d" layout-manager="GridLayoutManager" row-count="4" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <enabled value="true"/>
+          <focusable value="true"/>
           <minimumSize width="800" height="600"/>
+          <opaque value="true"/>
+          <preferredSize width="800" height="600"/>
+          <verifyInputWhenFocusTarget value="false"/>
+          <visible value="true"/>
         </properties>
         <border type="none"/>
         <children>
-          <grid id="5e003" layout-manager="GridLayoutManager" row-count="3" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="48bab" layout-manager="GridLayoutManager" row-count="7" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+              <grid row="1" column="0" row-span="3" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <enabled value="true"/>
-              <focusable value="true"/>
-              <minimumSize width="800" height="600"/>
-              <opaque value="true"/>
-              <preferredSize width="800" height="600"/>
-              <verifyInputWhenFocusTarget value="false"/>
-              <visible value="true"/>
+              <background color="-8551544"/>
             </properties>
             <border type="none"/>
             <children>
-              <grid id="51d17" layout-manager="GridLayoutManager" row-count="7" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-                <margin top="0" left="0" bottom="0" right="0"/>
+              <component id="9178c" class="javax.swing.JButton" binding="atletasButtonSide">
                 <constraints>
-                  <grid row="2" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <background color="-8551544"/>
-                </properties>
-                <border type="none"/>
-                <children>
-                  <component id="326d1" class="javax.swing.JButton" binding="atletasButtonSide">
-                    <constraints>
-                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                    </constraints>
-                    <properties>
-                      <background color="-13947344"/>
-                      <font name="Consolas" size="18"/>
-                      <foreground color="-1"/>
-                      <text value="Atletas"/>
-                    </properties>
-                  </component>
-                  <component id="7823b" class="javax.swing.JButton" binding="estatisticasButtonSide">
-                    <constraints>
-                      <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                    </constraints>
-                    <properties>
-                      <background color="-13947344"/>
-                      <font name="Consolas" size="18"/>
-                      <foreground color="-1"/>
-                      <text value="Estatisticas"/>
-                    </properties>
-                  </component>
-                  <component id="5f67f" class="javax.swing.JButton" binding="sobreButtonSide">
-                    <constraints>
-                      <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                    </constraints>
-                    <properties>
-                      <background color="-13947344"/>
-                      <font name="Consolas" size="18"/>
-                      <foreground color="-1"/>
-                      <text value="Sobre"/>
-                    </properties>
-                  </component>
-                  <component id="d85e5" class="javax.swing.JButton" binding="eventosButtonSide">
-                    <constraints>
-                      <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                    </constraints>
-                    <properties>
-                      <background color="-13947344"/>
-                      <font name="Consolas" size="18"/>
-                      <foreground color="-1"/>
-                      <text value="Eventos"/>
-                    </properties>
-                  </component>
-                  <component id="50c2f" class="javax.swing.JButton" binding="loginButtonSide">
-                    <constraints>
-                      <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                    </constraints>
-                    <properties>
-                      <background color="-13947344"/>
-                      <font name="Consolas" size="18"/>
-                      <foreground color="-1"/>
-                      <text value="Login"/>
-                    </properties>
-                  </component>
-                  <component id="764af" class="javax.swing.JButton" binding="menuInicialButtonSide">
-                    <constraints>
-                      <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                    </constraints>
-                    <properties>
-                      <background color="-13947344"/>
-                      <font name="Consolas" size="18"/>
-                      <foreground color="-1"/>
-                      <text value="Menu Inicial"/>
-                    </properties>
-                  </component>
-                  <vspacer id="da7d4">
-                    <constraints>
-                      <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-                    </constraints>
-                  </vspacer>
-                </children>
-              </grid>
-              <component id="542dd" class="javax.swing.JLabel">
-                <constraints>
-                  <grid row="0" column="2" row-span="1" col-span="3" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <font name="Consolas" size="28" style="0"/>
-                  <text value="Gestor de Torneios"/>
-                </properties>
-              </component>
-              <component id="fa8ef" class="javax.swing.JLabel" binding="nomeUser">
-                <constraints>
-                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <font name="Consolas" size="20"/>
-                  <text value="NomeUser"/>
-                </properties>
-              </component>
-              <component id="23d39" class="javax.swing.JLabel" binding="fotoUser">
-                <constraints>
-                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <horizontalAlignment value="0"/>
-                  <horizontalTextPosition value="0"/>
-                  <text value=""/>
-                  <verticalAlignment value="0"/>
-                </properties>
-              </component>
-              <component id="16fc7" class="javax.swing.JTable" binding="table1" default-binding="true">
-                <constraints>
-                  <grid row="2" column="2" row-span="1" col-span="3" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                    <preferred-size width="150" height="50"/>
-                  </grid>
-                </constraints>
-                <properties>
-                  <background color="-8551544"/>
-                  <focusable value="false"/>
-                  <verifyInputWhenFocusTarget value="true"/>
-                </properties>
-              </component>
-              <component id="7c455" class="javax.swing.JButton" binding="adicionarAtletasButton">
-                <constraints>
-                  <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
                   <background color="-13947344"/>
                   <font name="Consolas" size="18"/>
                   <foreground color="-1"/>
-                  <text value="Adicionar Atletas"/>
+                  <text value="Atletas"/>
                 </properties>
               </component>
-              <component id="265aa" class="javax.swing.JButton" binding="importarAtletasButton">
+              <component id="27f72" class="javax.swing.JButton" binding="estatisticasButtonSide">
                 <constraints>
-                  <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+                  <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
                   <background color="-13947344"/>
                   <font name="Consolas" size="18"/>
                   <foreground color="-1"/>
-                  <text value="Importar Atletas"/>
+                  <text value="Estatisticas"/>
                 </properties>
               </component>
+              <component id="52a50" class="javax.swing.JButton" binding="sobreButtonSide">
+                <constraints>
+                  <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <background color="-13947344"/>
+                  <font name="Consolas" size="18"/>
+                  <foreground color="-1"/>
+                  <text value="Sobre"/>
+                </properties>
+              </component>
+              <component id="96e27" class="javax.swing.JButton" binding="eventosButtonSide">
+                <constraints>
+                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <background color="-13947344"/>
+                  <font name="Consolas" size="18"/>
+                  <foreground color="-1"/>
+                  <text value="Eventos"/>
+                </properties>
+              </component>
+              <component id="9b29" class="javax.swing.JButton" binding="loginButtonSide">
+                <constraints>
+                  <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <background color="-13947344"/>
+                  <font name="Consolas" size="18"/>
+                  <foreground color="-1"/>
+                  <text value="Login"/>
+                </properties>
+              </component>
+              <component id="71b99" class="javax.swing.JButton" binding="menuInicialButtonSide">
+                <constraints>
+                  <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <background color="-13947344"/>
+                  <font name="Consolas" size="18"/>
+                  <foreground color="-1"/>
+                  <text value="Menu Inicial"/>
+                </properties>
+              </component>
+              <vspacer id="62d29">
+                <constraints>
+                  <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+                </constraints>
+              </vspacer>
             </children>
           </grid>
+          <component id="cae9d" class="javax.swing.JLabel">
+            <constraints>
+              <grid row="0" column="2" row-span="1" col-span="3" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <font name="Consolas" size="28" style="0"/>
+              <text value="Gestor de Torneios"/>
+            </properties>
+          </component>
+          <component id="ebc2" class="javax.swing.JLabel" binding="nomeUser">
+            <constraints>
+              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <font name="Consolas" size="20"/>
+              <text value="NomeUser"/>
+            </properties>
+          </component>
+          <component id="f2c58" class="javax.swing.JLabel" binding="fotoUser">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <horizontalAlignment value="0"/>
+              <horizontalTextPosition value="0"/>
+              <text value=""/>
+              <verticalAlignment value="0"/>
+            </properties>
+          </component>
+          <component id="3aa56" class="javax.swing.JTable" binding="table1" default-binding="true">
+            <constraints>
+              <grid row="2" column="2" row-span="1" col-span="3" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                <preferred-size width="150" height="50"/>
+              </grid>
+            </constraints>
+            <properties>
+              <background color="-8551544"/>
+              <focusable value="false"/>
+              <verifyInputWhenFocusTarget value="true"/>
+            </properties>
+          </component>
+          <component id="9cb80" class="javax.swing.JButton" binding="adicionarAtletasButton">
+            <constraints>
+              <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <background color="-13947344"/>
+              <font name="Consolas" size="18"/>
+              <foreground color="-1"/>
+              <text value="Adicionar Atletas"/>
+            </properties>
+          </component>
+          <component id="71346" class="javax.swing.JButton" binding="editarAtletasButton">
+            <constraints>
+              <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <background color="-13947344"/>
+              <font name="Consolas" size="18"/>
+              <foreground color="-1"/>
+              <text value="Editar Atletas"/>
+            </properties>
+          </component>
+          <component id="df15f" class="javax.swing.JButton" binding="importarAtletasButton">
+            <constraints>
+              <grid row="1" column="3" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <background color="-13947344"/>
+              <font name="Consolas" size="18"/>
+              <foreground color="-1"/>
+              <text value="Importar Atletas"/>
+            </properties>
+          </component>
+          <component id="13900" class="javax.swing.JButton" binding="eliminarAtletasButton">
+            <constraints>
+              <grid row="3" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <background color="-13947344"/>
+              <font name="Consolas" size="18"/>
+              <foreground color="-1"/>
+              <text value="Eliminar Atletas"/>
+            </properties>
+          </component>
         </children>
       </grid>
     </children>
